Fix rule section collapsing in rule list

--- a/apps/st2-rules/style.less
+++ b/apps/st2-rules/style.less
@@ -19,6 +19,18 @@
     &__caption {
       border-bottom: 1px solid #8d9ca9;
     }
+
+    &--contracted {
+      padding-bottom: 0;
+
+      .st2-flex-table__caption {
+        border-bottom: 0;
+      }
+
+      .st2-flex-rule {
+        display: none;
+      }
+    }
   }
 
   .st2-flex-rule {
